--- a/style.css
+++ b/style.css
@@ -3,9 +3,13 @@ h1{
 }
 
 .input1{
-    margin-top: 10px;
+    margin-top: 20px;
     margin-bottom: 0;
     padding-bottom: 0;
+}
+
+body{
+    margin-bottom: 0;
 }
 
 /* .limit{
